# CmakeStudy

./: .gitignore  CMakeLists.txt  README.md
cmakeConfig/: cmake_compiler.cmake  cmake_output_path.cmake
lib/: attachLib.cmake
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/yyl/: CMakeLists.txt  yyl.cpp
lib/yyl/geometry/: BufferGeometry.h
lib/yyl/yyl/: base.h  camera.h  file_utils.cpp  file_utils.h  imgui_yyl.h  shader.h
opengl/: CMakeLists.txt
opengl/01create_windows/: CMakeLists.txt  study1.cpp
opengl/02triangle/: CMakeLists.txt  demo.h  demo1.cpp  demo2.cpp  demo3.cpp  demo4.cpp  main.cpp
opengl/03shader/: CMakeLists.txt  demo.h  demo1.cpp  demo2.cpp  demo3.cpp  main.cpp
opengl/03shader/shader/: vertex.vert
opengl/04texture/: CMakeLists.txt  demo.h  demo1.cpp  demo2.cpp  mian.cpp
opengl/04texture/shader/: vertex.vert
opengl/04texture/shader2/: fragment.frag  vertex.vert
opengl/05matrix/: CMakeLists.txt  demo.h  demo1.cpp  demo2.cpp  demo3.cpp  main.cpp
opengl/05matrix/shader/: fragment.frag  vertex.vert
opengl/05matrix/shader2/: vertex.vert
opengl/06imgui/: CMakeLists.txt  demo.h  demo1.cpp  main.cpp
opengl/06imgui/shader/: fragment.frag
opengl/07camera/: CMakeLists.txt  demo.h  demo1.cpp  demo2.cpp  main.cpp
opengl/07camera/shader/: vertex.vert
opengl/08light/: CMakeLists.txt  demo.h  light1color.cpp  main.cpp
opengl/08light/shader/: light.vert  obj.frag  obj.vert
opengl/09lightcolor/: CMakeLists.txt  light2color.cpp
opengl/09lightcolor/shader2/: box.frag
opengl/0demo/: CMakeLists.txt  main.cpp
opengl/10light_basic/: CMakeLists.txt  main.cpp
opengl/10light_basic/shader/: box.frag
opengl/11light_map/: CMakeLists.txt  main.cpp
opengl/11light_map/shader/: box.frag  box.vert  light.frag
opengl/12light_map_exercise/: CMakeLists.txt  main.cpp
opengl/12light_map_exercise/shader/: box.frag  light.vert
opengl/study1/: CMakeLists.txt  study1.cpp  study1.h
simple/: CmakeLists.txt
simple/dynLib/: CMakeLists.txt  dynLib.cpp  dynLib.h
simple/dynLib/demo2/: demo2.h
simple/halloword/: CmakeLists.txt  halloword.cpp
simple/staticLib/: CmakeLists.txt  slib.cpp  slib.h
static/: analysis.dio
