project(openglDemo)
add_subdirectory(0demo)
add_subdirectory(01create_windows)
add_subdirectory(02triangle)
add_subdirectory(03shader)
add_subdirectory(04texture)
add_subdirectory(05matrix)
add_subdirectory(06imgui)
add_subdirectory(07camera)
add_subdirectory(08light)
add_subdirectory(09lightcolor)
add_subdirectory(10light_basic)
add_subdirectory(11light_map)
add_subdirectory(12light_map_exercise)